# ukumog-engine

./: .gitignore  DEV_AGENDA.md  DEV_NEXT_STAGE.md  README.md  play_cli.py  play_gui.py  pyproject.toml
data/: phase7_baseline.npz  phase7_ml_bigger.npz  quiet_value_v1.npz  quiet_value_v1_deep.npz  ukumog_train.npz
dev/: README.md  __init__.py
dev/tools/: __init__.py  ml_match_suite.py  search_benchmark.py
docs/: GUI_DEVLOG.md  SEARCH_ENGINE_DEVLOG.md  WEBSITE_INTEGRATION.md
docs/archive/: DEV_AGENDA.md  DEV_NEXT_STAGE.md  LEGACY_ML_WORKFLOWS.md  README_HISTORY_20260421.md
tests/: test_bridge.py  test_gui.py  test_incremental.py  test_ml.py  test_rules.py
tools/: ml_match_suite.py  search_benchmark.py
ukumog_engine/: __init__.py  app_runtime.py  board.py  eval_lookup.py  incremental.py  masks.py  position.py  search.py  solver.py  tactical_detail.py  tactics.py  validator.py
ukumog_engine/apps/: __init__.py  gui.py  json_bridge.py
ukumog_engine/ml/: __init__.py  data.py  features.py  generate_data.py  generate_root_policy_data.py  inference.py  inspect_data.py  mask_features.py  model.py  symmetry.py  train.py  train_root_policy.py
ukumog_engine/ports/: __init__.py  service.py
